syntax = "proto3";

package log_message;

option go_package =  "./proto";

message LogMessageRequest {
    string header = 1;
    string log = 2;
    string error = 3;
}

message LogMessageResponse {
    string result = 1;
}

service LogMessageService {
    rpc SendLogMessage(stream LogMessageRequest) returns (LogMessageResponse);
}

